// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div>
  <div
    class="am-tabs am-tabs-horizontal am-tabs-top"
  >
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
        style="background-color:#fff"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%"
          >
            <span
              class="am-badge"
            >
              First Tab
              <sup
                class="am-badge-text"
              >
                3
              </sup>
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:33.333333333333336%"
          >
            <span
              class="am-badge"
            >
              Second Tab
              <sup
                class="am-badge-text"
              >
                今日(20)
              </sup>
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%"
          >
            <span
              class="am-badge"
            >
              Third Tab
              <sup
                class="am-badge-dot"
              />
            </span>
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:33.333333333333336%;left:33.333333333333336%"
          />
        </div>
      </div>
    </div>
    <div
      class="am-tabs-content-wrap am-tabs-content-wrap-animated"
      style="touch-action:pan-y;transform:translate3d(-100%, 0px, 0px);-webkit-transform:translate3d(-100%, 0px, 0px);-moz-transform:translate3d(-100%, 0px, 0px)"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          Content of first tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          Content of second tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          Content of third tab
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-tabs am-tabs-horizontal am-tabs-bottom"
  >
    <div
      class="am-tabs-content-wrap am-tabs-content-wrap-animated"
      style="touch-action:pan-y;transform:translate3d(-100%, 0px, 0px);-webkit-transform:translate3d(-100%, 0px, 0px);-moz-transform:translate3d(-100%, 0px, 0px)"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          Content of first tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          Content of second tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          Content of third tab
        </div>
      </div>
    </div>
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-bottom"
        style="background-color:#fff"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%"
          >
            <span>
              First Tab
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:33.333333333333336%"
          >
            <span>
              Second Tab
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%"
          >
            <span>
              Third Tab
            </span>
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:33.333333333333336%;left:33.333333333333336%"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/fixedheight.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    style="height:200px"
  >
    <div
      class="am-tabs am-tabs-horizontal am-tabs-top"
    >
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div
          class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
          style="background-color:#fff"
        >
          <div
            class="am-tabs-default-bar-content"
            style="touch-action:pan-y"
          >
            <div
              class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
              style="width:33.333333333333336%"
            >
              First Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:33.333333333333336%"
            >
              Second Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:33.333333333333336%"
            >
              Third Tab
            </div>
            <div
              class="am-tabs-default-bar-underline"
              style="width:33.333333333333336%;left:0%"
            />
          </div>
        </div>
      </div>
      <div
        class="am-tabs-content-wrap am-tabs-content-wrap-animated"
        style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px)"
      >
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff"
          >
            Content of first tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff"
          >
            Content of second tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/mutlitabs.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-tabs am-tabs-horizontal am-tabs-top"
  >
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
        style="background-color:#fff"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px)"
        >
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:20%"
          >
            1st Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            2nd Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            3rd Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            4th Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            5th Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            6th Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            7th Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            8th Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:20%"
          >
            9th Tab
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:20%;left:0%"
          />
        </div>
        <div
          class="am-tabs-default-bar-nextpage"
        />
      </div>
    </div>
    <div
      class="am-tabs-content-wrap am-tabs-content-wrap-animated"
      style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px)"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          <p>
            Content of 1st Tab
          </p>
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff"
        >
          <p>
            Content of 2nd Tab
          </p>
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/noanim.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-tabs am-tabs-horizontal am-tabs-top"
  >
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-top"
        style="background-color:#fff"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%"
          >
            First Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%"
          >
            Second Tab
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:33.333333333333336%"
          >
            Third Tab
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:33.333333333333336%;left:66.66666666666667%"
          />
        </div>
      </div>
    </div>
    <div
      class="am-tabs-content-wrap"
      style="touch-action:pan-y;transform:translate3d(-200%, 0px, 0px);-webkit-transform:translate3d(-200%, 0px, 0px);-moz-transform:translate3d(-200%, 0px, 0px)"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff"
        >
          Content of second tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff"
        >
          Content of third tab
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/sticky.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div>
    <div
      class="am-tabs am-tabs-horizontal am-tabs-top"
    >
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div>
          <div />
          <div
            style="z-index:1"
          >
            <div
              class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
              style="background-color:#fff"
            >
              <div
                class="am-tabs-default-bar-content"
                style="touch-action:pan-y"
              >
                <div
                  class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
                  style="width:33.333333333333336%"
                >
                  First Tab
                </div>
                <div
                  class="am-tabs-default-bar-tab"
                  style="width:33.333333333333336%"
                >
                  Second Tab
                </div>
                <div
                  class="am-tabs-default-bar-tab"
                  style="width:33.333333333333336%"
                >
                  Third Tab
                </div>
                <div
                  class="am-tabs-default-bar-underline"
                  style="width:33.333333333333336%;left:0%"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="am-tabs-content-wrap am-tabs-content-wrap-animated"
        style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px)"
      >
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff"
          >
            Content of first tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff"
          >
            Content of second tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;
